--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: Cutive-Regular;
+  src: url('./fonts/Cutive-Regular.ttf');
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
